[package]
name = "near-vote"
version = "0.1.0"
authors = ["Thom <thom@lovada.art>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"

[workspace]
members = []
